[package]
name = "apollo-client-rs"
version = "1.0.0"
authors = ["TAC Mod Team <info@theseus-aegis.com>"]
edition = "2021"
rust-version = "1.59"

[lib]
name = "apollo_client"
crate-type = ["cdylib"]

[dependencies]
arma-rs = "1.8"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4"
simplelog = "0.12"
