[package]
name = "apollo-client-rs"
version = "1.0.0"
authors = ["Theseus Incorporated <info@theseus-aegis.com>"]
edition = "2021"
rust-version = "1.59"

[lib]
name = "apollo_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
arma-rs = "1.10"
lazy_static = "1.5"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
simplelog = "0.12"
