[package]
name = "apollo_client"
version = "0.1.0"
authors = ["TAC Mod Team <info@theseus-aegis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", rev = "4f0be98" }
common = { path = "../common" }
reqwest = { version = "0.10.8", features = ["blocking"] }
